<resources>
    <string name="app_name">TravelPal</string>

    <!--<string name="hello_world">Hello world!</string>-->
    <string name="action_settings">Settings</string>

    <string name="locationText">Location: </string>
    <!--<string name="toStationText">To: </string>-->

    <string name="database_name">TravelPal</string>
    <string name="create_client_id_text">To use the app, you need to request an account:</string>
    <string name="create_client_id_submit_text">Request an account</string>

    <string name="service_url">http://cmps121-travelpal.appspot.com/</string>
    <string name="prefs_user_settings">My info</string>
    <string name="prefs_username">Name</string>
    <string name="pref_user_name_summary">Your name to be displayed at startup</string>
    <string name="create_client_id_progress_text">Please wait while retrieving new ID..</string>
    <string name="account_created_text">Account created!</string>
    <string name="start_using_account_text">Start</string>
    <string name="action_history">History</string>
    <string name="action_reload">Reload</string>

    <string name="google_app_id">730656228532</string>
</resources>
