<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <!--<item-->
        <!--android:id="@+id/myswitch"-->
        <!--android:title=""-->
        <!--android:showAsAction="always"-->
        <!--android:actionLayout="@layout/switch_button"-->
        <!--/>-->
    <item android:id="@+id/action_settings" android:title="@string/action_settings" android:orderInCategory="100" android:icon="@android:drawable/ic_menu_manage" android:showAsAction="always" />
    <item android:id="@+id/action_reload" android:title="@string/action_reload" android:orderInCategory="100" android:icon="@android:drawable/ic_menu_rotate" android:showAsAction="always" />
    <item android:id="@+id/action_history" android:title="@string/action_history" android:orderInCategory="100" android:icon="@android:drawable/ic_dialog_map" android:showAsAction="always" />

</menu>
