<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/inputViewContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_client_id_text"
            android:layout_margin="10dp"
            />

        <!--<EditText-->
        <!--android:id="@+id/clientIdEditText"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="10dp"-->
        <!--/>-->

        <Button
            android:id="@+id/createNewClientIdButton"
            android:text="@string/create_client_id_submit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/userCreatedViewContainer"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_created_text"
            android:layout_margin="10dp"
            />
        <Button
            android:id="@+id/startUsingAccountButton"
            android:text="@string/start_using_account_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/checkNewClientIdRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:paddingLeft="5dp"
        android:background="#aa000011" >

        <ProgressBar
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateOnly="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_client_id_progress_text"
            android:layout_margin="10dp"
            />

    </LinearLayout>

</FrameLayout>